Implementacion de tipos de hechos y el conversor para aquellos hechos que nos vienen de las fuentes